[gd_scene load_steps=18 format=3 uid="uid://b0jyw0dskbw1m"]

[ext_resource type="Texture2D" uid="uid://c7fo25dkewytj" path="res://assets/GUI/black_oval.png" id="1_eqfua"]
[ext_resource type="Script" uid="uid://7w1ww4sd88ts" path="res://scripts2/Enemy2.gd" id="1_xi612"]
[ext_resource type="Texture2D" uid="uid://2ngenbb8kcn0" path="res://assets/villains/Gazo.png" id="2_xi612"]
[ext_resource type="Texture2D" uid="uid://ditj0cpb4v1ws" path="res://assets/GUI/horizontal_black_bar.png" id="3_3p8ue"]
[ext_resource type="Texture2D" uid="uid://cpvv3cjqr4brr" path="res://assets/GUI/monster_health_bar_red.png" id="4_ffjv4"]
[ext_resource type="FontFile" uid="uid://c4pe7v7qaoxgf" path="res://assets/fonts/Comfortaa-Bold.ttf" id="5_6olpu"]
[ext_resource type="AudioStream" uid="uid://2q8bt48w73ap" path="res://assets/sound_effects/monster_death.mp3" id="7_ffjv4"]
[ext_resource type="AudioStream" uid="uid://b8q28jf45ioh" path="res://assets/sound_effects/hit_sound.mp3" id="8_6olpu"]
[ext_resource type="PackedScene" uid="uid://ne1mtcf1gjyd" path="res://scenes/scene_transition_animation.tscn" id="9_6olpu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_24nr5"]
radius = 135.0
height = 378.0

[sub_resource type="Animation" id="Animation_0v4sl"]
resource_name = "AttackMove"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 400), Vector2(850, 500), Vector2(960, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.3, 0.3), Vector2(0.25, 0.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BasicAttack/BasicAttackLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kld86"]
resource_name = "BigAttack"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BigAttack/BigAttackLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1, 1.5, 1.525, 1.55, 1.575, 1.6, 1.625, 1.65, 1.7, 2.5, 2.6, 3.4, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(960, 400), Vector2(960, 400), Vector2(1075, 325), Vector2(1075, 325), Vector2(1070, 325), Vector2(1080, 325), Vector2(1070, 325), Vector2(1080, 325), Vector2(1070, 325), Vector2(1080, 325), Vector2(1075, 325), Vector2(1075, 325), Vector2(850, 500), Vector2(850, 500), Vector2(960, 400)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1, 2.5, 2.6, 3.4, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.25, 0.25), Vector2(0.2, 0.2), Vector2(0.2, 0.2), Vector2(0.3, 0.3), Vector2(0.3, 0.3), Vector2(0.25, 0.25)]
}

[sub_resource type="Animation" id="Animation_ayafi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BasicAttack/BasicAttackLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BigAttack/BigAttackLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kld86"]
_data = {
&"AttackMove": SubResource("Animation_0v4sl"),
&"BigAttack": SubResource("Animation_kld86"),
&"RESET": SubResource("Animation_ayafi")
}

[sub_resource type="Animation" id="Animation_inn5n"]
resource_name = "EnemyDeath"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyDeath/WhiteRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyDeath/WhiteRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 400), Vector2(960, 1300)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BlackFloor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 560), Vector2(960, 1460)]
}

[sub_resource type="Animation" id="Animation_i6y1n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyDeath/WhiteRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyDeath/WhiteRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 400)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BlackFloor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 560)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6y1n"]
_data = {
&"EnemyDeath": SubResource("Animation_inn5n"),
&"RESET": SubResource("Animation_i6y1n")
}

[node name="Enemy2" type="Node2D"]
script = ExtResource("1_xi612")

[node name="BlackFloor" type="Sprite2D" parent="."]
position = Vector2(960, 560)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_eqfua")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 400)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_xi612")

[node name="HealthBarBG" type="Sprite2D" parent="."]
position = Vector2(960, 65)
scale = Vector2(1.6, 0.45)
texture = ExtResource("3_3p8ue")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 560.0
offset_top = -35.0
offset_right = 1360.0
offset_bottom = 215.0
value = 50.0
texture_progress = ExtResource("4_ffjv4")

[node name="HealthLabel" type="Label" parent="."]
offset_left = 560.0
offset_top = 40.0
offset_right = 1360.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("5_6olpu")
theme_override_font_sizes/font_size = 35
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(960, 400)
shape = SubResource("CapsuleShape2D_24nr5")

[node name="BasicAttack" type="Node2D" parent="."]
position = Vector2(960, 150)

[node name="BasicAttackMove" type="AnimationPlayer" parent="BasicAttack"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_kld86")
}

[node name="BasicAttackLabel" type="Label" parent="BasicAttack"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -23.0
offset_right = 424.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_6olpu")
theme_override_font_sizes/font_size = 40
text = "Le monstre vous frappe avec ses poings de fumée !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BigAttack" type="Node2D" parent="."]
position = Vector2(960, 150)

[node name="BigAttackMove" type="AnimationPlayer" parent="BigAttack"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_kld86")
}

[node name="BigAttackLabel" type="Label" parent="BigAttack"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -11.5
offset_right = 152.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_6olpu")
theme_override_font_sizes/font_size = 40
text = "Le monstre crache une fumée toxic que vous inhalez !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyDeath" type="Node2D" parent="."]

[node name="WhiteRect" type="ColorRect" parent="EnemyDeath"]
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0

[node name="EnemyDeath" type="AnimationPlayer" parent="EnemyDeath"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_i6y1n")
}

[node name="Monster_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ffjv4")

[node name="Hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6olpu")

[node name="Scene_transition_animation" parent="." instance=ExtResource("9_6olpu")]
